completed parallelization pipeline

--- a/parallel/parallel.ipynb
+++ b/parallel/parallel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "8cc64328-b914-4baa-a2cd-1c91ceb3be27",
    "metadata": {},
    "outputs": [],
@@ -18,18 +18,10 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
-    "import uuid\n",
-    "import multiprocessing as mp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7eda99d0-54c3-489e-8f8d-0f657dec5a02",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# constants"
+    "\n",
+    "from multiprocessing import Pool\n",
+    "from multiprocessing import cpu_count\n",
+    "from functools import partial"
    ]
   },
   {
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "777e679f-a397-4331-9358-ad5d6e9b017c",
    "metadata": {},
    "outputs": [],
@@ -86,7 +78,7 @@
     "            'book_id' : [randint(1, n_books) for _ in range(dataset_size)],\n",
     "            'author_id' : [randint(1, n_authors) for _ in range(dataset_size)],\n",
     "            'book_genre' : [randint(1, n_genres) for _ in range(dataset_size)],\n",
-    "            'reader_id' : [uuid.uuid4() for _ in range(dataset_size)],\n",
+    "            'reader_id' : [randint(1, n_readers) for _ in range(dataset_size)],\n",
     "            'num_pages' : [randint(75, 700) for _ in range(dataset_size)],\n",
     "            'book_rating' : [randint(1, 10) for _ in range(dataset_size)],\n",
     "            'publisher_id' : [randint(1, n_publishers) for _ in range(dataset_size)],\n",
@@ -97,8 +89,8 @@
     "    ).drop_duplicates()\n",
     "    return d\n",
     "  \n",
-    "d = generate_data(dataset_size = 100000)\n",
-    "d.to_csv('data.csv', index = False)"
+    "d = generate_data(dataset_size = 10000000)\n",
+    "# d.to_csv('data.csv', index = False)"
    ]
   },
   {
@@ -111,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "7193267e-87bf-4c64-86d2-dfb25d623392",
    "metadata": {},
    "outputs": [
@@ -151,203 +143,192 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>180</td>\n",
-       "      <td>9</td>\n",
-       "      <td>c38dad04-dfb1-4f7f-bed5-a90947200e8a</td>\n",
-       "      <td>577</td>\n",
-       "      <td>9</td>\n",
-       "      <td>24</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>152</td>\n",
+       "      <td>2394</td>\n",
+       "      <td>249</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3799</td>\n",
+       "      <td>474</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>122</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1151</td>\n",
-       "      <td>171</td>\n",
+       "      <td>1703</td>\n",
+       "      <td>191</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2355</td>\n",
+       "      <td>447</td>\n",
+       "      <td>2</td>\n",
        "      <td>7</td>\n",
-       "      <td>a2661398-debf-483f-a09f-b5756b59413b</td>\n",
-       "      <td>240</td>\n",
-       "      <td>9</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>165</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>175</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2516</td>\n",
-       "      <td>89</td>\n",
-       "      <td>9</td>\n",
-       "      <td>409ab769-8d43-4f80-9347-549e50ec6a53</td>\n",
-       "      <td>598</td>\n",
-       "      <td>10</td>\n",
-       "      <td>41</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>126</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1600</td>\n",
+       "      <td>78</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13005</td>\n",
+       "      <td>399</td>\n",
+       "      <td>3</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>129</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>891</td>\n",
-       "      <td>148</td>\n",
-       "      <td>4</td>\n",
-       "      <td>13e0a2c0-7314-4829-83cd-316177f14493</td>\n",
-       "      <td>554</td>\n",
-       "      <td>8</td>\n",
-       "      <td>39</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>128</td>\n",
+       "      <td>347</td>\n",
+       "      <td>380</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1221</td>\n",
+       "      <td>636</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>45</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2880</td>\n",
-       "      <td>179</td>\n",
-       "      <td>3</td>\n",
-       "      <td>54ccd5e0-3c9b-426b-b25a-ea79fb9a016e</td>\n",
-       "      <td>234</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>181</td>\n",
+       "      <td>1183</td>\n",
+       "      <td>269</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15059</td>\n",
+       "      <td>610</td>\n",
        "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99995</th>\n",
-       "      <td>1446</td>\n",
-       "      <td>142</td>\n",
-       "      <td>6</td>\n",
-       "      <td>41ee9fae-bf6a-44e2-911a-879b7be8e063</td>\n",
-       "      <td>583</td>\n",
-       "      <td>5</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>159</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99996</th>\n",
-       "      <td>1202</td>\n",
-       "      <td>52</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9ac2fa23-2ea3-4680-b998-03f6a241148f</td>\n",
-       "      <td>327</td>\n",
-       "      <td>7</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>121</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99997</th>\n",
-       "      <td>1078</td>\n",
-       "      <td>211</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1da1c30b-7ab4-4c6e-b6ac-61dbcc981834</td>\n",
-       "      <td>673</td>\n",
-       "      <td>6</td>\n",
-       "      <td>34</td>\n",
+       "      <td>16</td>\n",
        "      <td>2003</td>\n",
-       "      <td>128</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99998</th>\n",
-       "      <td>176</td>\n",
-       "      <td>129</td>\n",
-       "      <td>8</td>\n",
-       "      <td>4d425d33-556b-4be2-b826-341fa1e1eaf4</td>\n",
-       "      <td>339</td>\n",
-       "      <td>6</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>39</td>\n",
+       "      <td>163</td>\n",
        "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99999</th>\n",
-       "      <td>1297</td>\n",
-       "      <td>338</td>\n",
-       "      <td>5</td>\n",
-       "      <td>782afcea-5831-451d-9e91-9f38cd0e09bf</td>\n",
-       "      <td>204</td>\n",
-       "      <td>7</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>122</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100000 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       book_id  author_id  book_genre                             reader_id  \\\n",
-       "0         2022        180           9  c38dad04-dfb1-4f7f-bed5-a90947200e8a   \n",
-       "1         1151        171           7  a2661398-debf-483f-a09f-b5756b59413b   \n",
-       "2         2516         89           9  409ab769-8d43-4f80-9347-549e50ec6a53   \n",
-       "3          891        148           4  13e0a2c0-7314-4829-83cd-316177f14493   \n",
-       "4         2880        179           3  54ccd5e0-3c9b-426b-b25a-ea79fb9a016e   \n",
-       "...        ...        ...         ...                                   ...   \n",
-       "99995     1446        142           6  41ee9fae-bf6a-44e2-911a-879b7be8e063   \n",
-       "99996     1202         52           1  9ac2fa23-2ea3-4680-b998-03f6a241148f   \n",
-       "99997     1078        211           7  1da1c30b-7ab4-4c6e-b6ac-61dbcc981834   \n",
-       "99998      176        129           8  4d425d33-556b-4be2-b826-341fa1e1eaf4   \n",
-       "99999     1297        338           5  782afcea-5831-451d-9e91-9f38cd0e09bf   \n",
+       "   book_id  author_id  book_genre  reader_id  num_pages  book_rating  \\\n",
+       "0     2394        249           4       3799        474            1   \n",
+       "1     1703        191          10       2355        447            2   \n",
+       "2     1600         78           2      13005        399            3   \n",
+       "3      347        380           7       1221        636            2   \n",
+       "4     1183        269          10      15059        610            2   \n",
        "\n",
-       "       num_pages  book_rating  publisher_id  publish_year  book_price  \\\n",
-       "0            577            9            24          2006         152   \n",
-       "1            240            9             8          2012         165   \n",
-       "2            598           10            41          2021         126   \n",
-       "3            554            8            39          2007         128   \n",
-       "4            234            6            12          2000         181   \n",
-       "...          ...          ...           ...           ...         ...   \n",
-       "99995        583            5             8          2015         159   \n",
-       "99996        327            7            47          2001         121   \n",
-       "99997        673            6            34          2003         128   \n",
-       "99998        339            6            46          2018          39   \n",
-       "99999        204            7            14          2007         122   \n",
-       "\n",
-       "       text_lang  \n",
-       "0              1  \n",
-       "1              6  \n",
-       "2              1  \n",
-       "3              3  \n",
-       "4              2  \n",
-       "...          ...  \n",
-       "99995          3  \n",
-       "99996          3  \n",
-       "99997          1  \n",
-       "99998          5  \n",
-       "99999          2  \n",
-       "\n",
-       "[100000 rows x 10 columns]"
+       "   publisher_id  publish_year  book_price  text_lang  \n",
+       "0            34          2013         122          1  \n",
+       "1             7          2020         175          7  \n",
+       "2            40          2013         129          5  \n",
+       "3            20          2014          45          3  \n",
+       "4            16          2003         163          5  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d"
+    "d.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e37be189-a333-4dcd-9b19-c1bee46e722e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_price_per_reader(data):\n",
+    "    readers = data.reader_id.unique()\n",
+    "    res = []\n",
+    "    for reader in readers:\n",
+    "        avg_price = np.mean(data[data['reader_id'] == reader].book_price.values)\n",
+    "        r_df = {\n",
+    "            'reader_id' : reader,\n",
+    "            'avg_price' : avg_price\n",
+    "        }\n",
+    "        res.append(r_df)\n",
+    "    return pd.DataFrame(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f7cc8b83-3750-4064-9e54-21dbe9c2793e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 7min 6s, sys: 5.87 s, total: 7min 12s\n",
+      "Wall time: 1min 44s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time r_df = avg_price_per_reader(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "783247b9-b4f5-4c34-b01c-95a489d0b513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 158 ms, sys: 67.8 ms, total: 226 ms\n",
+      "Wall time: 242 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time gb_df = d.groupby('reader_id')['book_price'].mean().reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "42d04a26-77b3-4c9e-bc9c-4fe06ec27c6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parallel_singular_param(d, fn, n_cores):\n",
+    "    if cpu_count() < n_cores:\n",
+    "        raise ValueError(\"The number of CPU's specified exceed the amount available\")\n",
+    "\n",
+    "    df_list = np.array_split(d, n_cores)\n",
+    "    pool = Pool(n_cores)\n",
+    "    res = pool.map(fn, df_list)\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "    return pd.concat(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6ff2135-0d19-4da6-935d-0d8e3fa51c7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time para_res = parallel_singular_param(d, avg_price_per_reader, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f383939b-e337-4a88-951c-d47a77c6ba16",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -367,11 +348,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d11bb2d4-3b0a-4c5e-9c75-2607f5778876",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def genre_features(d, readers, genre_col = 'book_genre', reader_col = 'reader_id'):\n",
+    "    res = []\n",
+    "    for reader in readers:\n",
+    "        g = d[d[reader_col] == reader][genre_col].value_counts(normalize = True).to_dict()\n",
+    "        df = pd.DataFrame([g], index = [reader])\n",
+    "        res.append(df)\n",
+    "    return pd.concat(res).fillna(0)\n",
+    "\n",
+    "def parallelize_section(fn, d, readers, n_cores):\n",
+    "    if cpu_count() < n_cores:\n",
+    "        raise ValueError(\"The number of CPU's specified exceed the amount available\")\n",
+    "\n",
+    "    reader_list = np.array_split(readers, n_cores)\n",
+    "    pool = Pool(n_cores)\n",
+    "    calc_df = pool.map(partial(fn, d), reader_list)\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "    return pd.concat(calc_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59ef444a-85dc-4967-90d7-fd266f272572",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "readers = d.reader_id.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f997cde-8b06-4940-9cb0-6fd15765a54f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time g_df = genre_features(d, readers)"
+   ]
   },
   {
    "cell_type": "code",
@@ -379,7 +399,9 @@
    "id": "954dccc0-633d-4481-8bc7-7502109e8288",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%time para_g_df = parallelize_section(genre_features, d, readers, 4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -410,7 +432,33 @@
    "id": "9c504cf6-c81d-43da-9032-8b4bef061e7f",
    "metadata": {},
    "source": [
-    "## Parallelize Sci-Kit Learn w/ Ray"
+    "## Parallelize Sci-Kit Learn\n",
+    "\n",
+    "Parallel Jobs Available : \n",
+    "- RFC  \n",
+    "- KNN\n",
+    "\n",
+    "Parallel Jobs Unavailable : \n",
+    "- GBC\n",
+    "- Naieve Bayes\n",
+    "\n",
+    "Possible for hyperparameter tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ffe43da-9d67-4865-bc8f-8f8406fcfcf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ft = ['book_genre', 'num_pages', 'book_rating', 'publish_year', 'text_lang']\n",
+    "target = ['book_price']\n",
+    "\n",
+    "X = d[ft].values\n",
+    "y = d[target].values\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X ,y ,test_size = 0.2)"
    ]
   },
   {
@@ -419,7 +467,13 @@
    "id": "a09aed2f-5092-4423-aaa8-c7955cd74242",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "rfc = RandomForestClassifier(\n",
+    "    max_depth=2, random_state=0, n_jobs = 4\n",
+    ")\n",
+    "rfc.fit(x_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
@@ -427,7 +481,13 @@
    "id": "2ca6744d-d3c4-46f0-922d-446734d4d678",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "gbc = GradientBoostingClassifier(\n",
+    "    max_depth=2, random_state=0\n",
+    ")\n",
+    "gbc.fit(x_train, y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
