added documentation to functions

--- a/parallel/parallel.ipynb
+++ b/parallel/parallel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8cc64328-b914-4baa-a2cd-1c91ceb3be27",
    "metadata": {},
    "outputs": [],
@@ -243,6 +243,15 @@
    "outputs": [],
    "source": [
     "def avg_price_per_reader(data):\n",
+    "    '''\n",
+    "    This function will calculate the average book price associated to each reader\n",
+    "    \n",
+    "    params:\n",
+    "        data (DataFrame) : The dataset holding the reader history and book price\n",
+    "        \n",
+    "    example:\n",
+    "        r_df = avg_price_per_reader(d)\n",
+    "    '''\n",
     "    readers = data.reader_id.unique()\n",
     "    res = []\n",
     "    for reader in readers:\n",
@@ -301,6 +310,23 @@
    "outputs": [],
    "source": [
     "def parallel_singular_param(d, fn, n_cores):\n",
+    "    '''\n",
+    "    This function will run a function with a single argument in parallel depending on\n",
+    "    the number of cores the user has specified. If the user specifies more cores than\n",
+    "    availalbe on the computer, the function will raise a value error.\n",
+    "    \n",
+    "    params:\n",
+    "        d (DataFrame) : The argument for the function\n",
+    "        fn (Function) : The function you want to run in parallel\n",
+    "        n_cores (Integer) : The number of cores you want to use\n",
+    "        \n",
+    "    example:\n",
+    "        parallel_singular_param(\n",
+    "            d,\n",
+    "            avg_price_per_reader,\n",
+    "            4\n",
+    "        )\n",
+    "    '''\n",
     "    if cpu_count() < n_cores:\n",
     "        raise ValueError(\"The number of CPU's specified exceed the amount available\")\n",
     "\n",
@@ -321,22 +347,6 @@
    "source": [
     "%time para_res = parallel_singular_param(d, avg_price_per_reader, 4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f383939b-e337-4a88-951c-d47a77c6ba16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4995efd-2b77-4a0b-8a52-1c0844208ed3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
