completed parallelization process for singular and multiple parameters

--- a/parallel/parallel.ipynb
+++ b/parallel/parallel.ipynb
@@ -266,40 +266,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f7cc8b83-3750-4064-9e54-21dbe9c2793e",
+   "execution_count": 12,
+   "id": "e7ec48df-e821-42a4-aab5-ead1a8f4f68f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7min 6s, sys: 5.87 s, total: 7min 12s\n",
-      "Wall time: 1min 44s\n"
+      "CPU times: user 15.5 s, sys: 13.2 ms, total: 15.5 s\n",
+      "Wall time: 15.5 s\n"
      ]
     }
    ],
    "source": [
     "%time r_df = avg_price_per_reader(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "783247b9-b4f5-4c34-b01c-95a489d0b513",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 158 ms, sys: 67.8 ms, total: 226 ms\n",
-      "Wall time: 242 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time gb_df = d.groupby('reader_id')['book_price'].mean().reset_index()"
    ]
   },
   {
@@ -340,12 +321,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6ff2135-0d19-4da6-935d-0d8e3fa51c7c",
+   "execution_count": 17,
+   "id": "6cf55b3f-d09f-46ff-80bb-68854cac0330",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 39.6 ms, sys: 235 ms, total: 275 ms\n",
+      "Wall time: 13.3 s\n"
+     ]
+    }
+   ],
    "source": [
-    "%time para_res = parallel_singular_param(d, avg_price_per_reader, 4)"
+    "%time para_r_df = parallel_singular_param(d, avg_price_per_reader, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e7724786-79bc-4239-9902-8462aae4de58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 17.5 ms, sys: 121 µs, total: 17.6 ms\n",
+      "Wall time: 22.4 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time gb_df = d.groupby('reader_id')['book_price'].mean().reset_index()"
    ]
   },
   {
@@ -364,6 +373,21 @@
    "outputs": [],
    "source": [
     "def genre_features(d, readers, genre_col = 'book_genre', reader_col = 'reader_id'):\n",
+    "    '''\n",
+    "    The following function will generate a normalized 1 hot encoding associated to the \n",
+    "    genres each user has read.\n",
+    "    \n",
+    "    params:\n",
+    "        d (DataFrame) : The dataset which holds the reader and book history\n",
+    "        readers (List) : The list of reader_id's\n",
+    "        genre_col (String) : The column in d which is associated to the book genre\n",
+    "        reader_col (String) : The column in d which is associated to the reader col\n",
+    "        \n",
+    "    example:\n",
+    "        readers = d.reader_id.unique()\n",
+    "        g_df = genre_features(d, readers)\n",
+    "    '''\n",
+    "    \n",
     "    res = []\n",
     "    for reader in readers:\n",
     "        g = d[d[reader_col] == reader][genre_col].value_counts(normalize = True).to_dict()\n",
@@ -372,6 +396,21 @@
     "    return pd.concat(res).fillna(0)\n",
     "\n",
     "def parallelize_section(fn, d, readers, n_cores):\n",
+    "    '''\n",
+    "    This function will parallelize a given input function which has multiple parameters\n",
+    "    as arguments. It will use the number of cores specified by the user. If the user \n",
+    "    specifies more cores than availalbe on the computer, the function will raise a value error.\n",
+    "    \n",
+    "    params:\n",
+    "        fn (Function) : The function you want to run in parallel\n",
+    "        d (DataFrame) : The dataframe parameter of the function\n",
+    "        readers (List) : The readers parameter of the function \n",
+    "        n_cores (Integer) : The number of cores you want to use\n",
+    "        \n",
+    "    example:\n",
+    "        readers = d.reader_id.unique()\n",
+    "        para_g_df = parallelize_section(genre_features, d, readers, 4)\n",
+    "    '''\n",
     "    if cpu_count() < n_cores:\n",
     "        raise ValueError(\"The number of CPU's specified exceed the amount available\")\n",
     "\n",
@@ -412,84 +451,6 @@
    "source": [
     "%time para_g_df = parallelize_section(genre_features, d, readers, 4)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9c504cf6-c81d-43da-9032-8b4bef061e7f",
-   "metadata": {},
-   "source": [
-    "## Parallelize Sci-Kit Learn\n",
-    "\n",
-    "Parallel Jobs Available : \n",
-    "- RFC  \n",
-    "- KNN\n",
-    "\n",
-    "Parallel Jobs Unavailable : \n",
-    "- GBC\n",
-    "- Naieve Bayes\n",
-    "\n",
-    "Possible for hyperparameter tuning"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ffe43da-9d67-4865-bc8f-8f8406fcfcf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ft = ['book_genre', 'num_pages', 'book_rating', 'publish_year', 'text_lang']\n",
-    "target = ['book_price']\n",
-    "\n",
-    "X = d[ft].values\n",
-    "y = d[target].values\n",
-    "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(X ,y ,test_size = 0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a09aed2f-5092-4423-aaa8-c7955cd74242",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "rfc = RandomForestClassifier(\n",
-    "    max_depth=2, random_state=0, n_jobs = 4\n",
-    ")\n",
-    "rfc.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ca6744d-d3c4-46f0-922d-446734d4d678",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "gbc = GradientBoostingClassifier(\n",
-    "    max_depth=2, random_state=0\n",
-    ")\n",
-    "gbc.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4ee8bf71-d2b4-4055-8f14-1bb0bf38598e",
-   "metadata": {},
-   "source": [
-    "## Concluding Remarks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e164f8b-ab2e-4879-8b04-8d8b0bfb2016",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
