initialized sklearn parallelization notebook

--- a/parallel/sklearn_parallel.ipynb
+++ b/parallel/sklearn_parallel.ipynb
@@ -1,9 +1,59 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e408515d-719e-4050-a36a-c0c8dbccefb2",
+   "metadata": {},
+   "source": [
+    "# Parallelize Sci-Kit Learn Models & Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "be1c3d71-81f5-4974-9488-2bebe76df1d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "from random import randint\n",
+    "from multiprocessing import Pool\n",
+    "from multiprocessing import cpu_count\n",
+    "from functools import partial\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be1c3d71-81f5-4974-9488-2bebe76df1d3",
+   "id": "07db4653-57b5-4310-aab0-d70b52bc96f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc3db885-825f-4437-afbd-d83a3de98294",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "403e88f1-d088-4f5f-949f-ca8a87e1a598",
    "metadata": {},
    "outputs": [],
    "source": []
