added to notebook some tests on dp

--- a/parallel/sklearn_parallel.ipynb
+++ b/parallel/sklearn_parallel.ipynb
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc3db885-825f-4437-afbd-d83a3de98294",
+   "id": "cd03b027-ec54-455c-ba12-e7fcb3b9389b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -53,10 +53,112 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "403e88f1-d088-4f5f-949f-ca8a87e1a598",
+   "id": "c4007131-9427-4494-bb2d-3f13ccb86d4e",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dc83deb-cb63-437a-ad47-a4b76d0ee1de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29efba11-7fd5-4253-9cb6-bf47ddef923b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "51599d62-cd6f-4e31-a6ba-deb6d3038e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fib(n):\n",
+    "    '''\n",
+    "    recursive\n",
+    "    '''\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1 or n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        f = fib(n-1) + fib(n-2)\n",
+    "    return f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2ed37876-f737-4391-a5c3-3e992c54abb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5a79e149-348d-4098-b5c0-8a3dff867899",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory = {}\n",
+    "def fib(n):\n",
+    "    '''\n",
+    "    dynamic - recursive\n",
+    "    '''\n",
+    "    if n in memory:\n",
+    "        return memory[n]\n",
+    "    elif n == 0:\n",
+    "        return 0\n",
+    "    elif n == 1 or n == 2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        f = fib(n-1) + fib(n-2)\n",
+    "    memory[n] = f\n",
+    "    return f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cd1c51fb-47a2-4350-abef-4ac9c88a93fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1779979416004714189"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib(89)"
+   ]
   }
  ],
  "metadata": {
