added data import function

--- a/parallel/sklearn_parallel.ipynb
+++ b/parallel/sklearn_parallel.ipynb
@@ -35,17 +35,75 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07db4653-57b5-4310-aab0-d70b52bc96f1",
+   "cell_type": "markdown",
+   "id": "fbbf29c3-8ff8-4142-a718-d168acd0570f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Generate Data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "cd03b027-ec54-455c-ba12-e7fcb3b9389b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_data(n_books = 3000, n_genres = 10, n_authors = 450, n_publishers = 50, n_readers = 30000, dataset_size = 100000):\n",
+    "    '''\n",
+    "    This function will generate a dataset with features associated to\n",
+    "    book data set. The dataset will have the following columns : \n",
+    "        - book_id (String) : Unique identified for the book\n",
+    "        - book_rating (Integer) : A value between 0 and 10\n",
+    "        - reader_id (String) : Unique identifier for the user\n",
+    "        - book_genre (Integer) : An integer representing a genre for the book, \n",
+    "                                 value is between 1 and 15, indicating that \n",
+    "                                 there are 15 unique genres. Each book can only\n",
+    "                                 have 1 genre\n",
+    "        - author_id (String) : Unique identifier for the author of the book\n",
+    "        - num_pages (Integer) : Random value between 70 and 500\n",
+    "        - publisher_id (String) : A unique identifier for the publisher of the book\n",
+    "        - publish_year (Integer) : The year of book publishing\n",
+    "        - book_price (Integer) : The sale price of the book\n",
+    "        - text_lang (Integer) : The language of the book - returns an integer which \n",
+    "                                is mapped to some language\n",
+    "        \n",
+    "    params:\n",
+    "        n_books (Integer) : The number of books you want the dataset to have\n",
+    "        n_genres (Integer) : Number of genres to be chosen from\n",
+    "        n_authors (Integer) : Number of authors to be generated\n",
+    "        n_publishers (Integer) : Number of publishers for the dataset\n",
+    "        n_readers (Integer) : Number of readers for the dataset\n",
+    "        dataset_size (Integer) : The number of rows to be generated \n",
+    "        \n",
+    "    example:\n",
+    "        data = generate_data()\n",
+    "    '''\n",
+    "    \n",
+    "    d = pd.DataFrame(\n",
+    "        {\n",
+    "            'book_id' : [randint(1, n_books) for _ in range(dataset_size)],\n",
+    "            'author_id' : [randint(1, n_authors) for _ in range(dataset_size)],\n",
+    "            'book_genre' : [randint(1, n_genres) for _ in range(dataset_size)],\n",
+    "            'reader_id' : [randint(1, n_readers) for _ in range(dataset_size)],\n",
+    "            'num_pages' : [randint(75, 700) for _ in range(dataset_size)],\n",
+    "            'book_rating' : [randint(1, 10) for _ in range(dataset_size)],\n",
+    "            'publisher_id' : [randint(1, n_publishers) for _ in range(dataset_size)],\n",
+    "            'publish_year' : [randint(2000, 2021) for _ in range(dataset_size)],\n",
+    "            'book_price' : [randint(1, 200) for _ in range(dataset_size)],\n",
+    "            'text_lang' : [randint(1,7) for _ in range(dataset_size)]\n",
+    "        }\n",
+    "    ).drop_duplicates()\n",
+    "    return d\n",
+    "  \n",
+    "d = generate_data(dataset_size = 10000000)\n",
+    "# d.to_csv('data.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dbbd2d93-3852-4a23-ae70-de27d49e2a4f",
    "metadata": {},
    "outputs": [],
    "source": []
